--- a/app.json
+++ b/app.json
@@ -18,7 +18,9 @@
       "bundleIdentifier": "com.neprena.ecascan",
       "infoPlist": {
         "ITSAppUsesNonExemptEncryption": false
-      }
+      },
+      "bundleIdentifier": "com.neprena.ecascan",
+      "buildNumber": "0.0.1"
     },
     "android": {
       "adaptiveIcon": {
