--- a/package.json
+++ b/package.json
@@ -12,26 +12,18 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/netinfo": "^11.4.1",
-    "@react-native-community/slider": "4.5.5",
-    "@react-native-picker/picker": "2.9.0",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
     "expo": "~52.0.37",
-    "expo-dev-client": "~5.0.12",
+    "expo-av": "~15.0.2",
     "expo-device": "^7.0.2",
     "expo-notifications": "^0.29.13",
-    "expo-status-bar": "~2.0.1",
-    "firebase": "^11.3.1",
     "react": "18.3.1",
     "react-native": "0.76.7",
-    "react-native-reanimated": "^3.17.0",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
-    "react-native-sound": "^0.11.2",
     "react-native-vector-icons": "^10.2.0",
-    "react-native-websocket": "^1.0.2",
-    "ws": "^8.18.1",
-    "expo-av": "~15.0.2"
+    "react-native-websocket": "^1.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
