--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@react-navigation/native-stack": "^7.2.0",
     "expo": "~52.0.37",
     "expo-av": "~15.0.2",
-    "expo-device": "^7.0.2",
+    "expo-device": "~7.0.2",
     "expo-notifications": "^0.29.13",
     "react": "18.3.1",
     "react-native": "0.76.7",
