--- a/app.json
+++ b/app.json
@@ -5,6 +5,7 @@
     "version": "0.0.4",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
+    "scheme": "ecascanphone",
     "userInterfaceStyle": "light",
     "newArchEnabled": true,
     "splash": {
