Fallback sur notifications en local
Pour suite du développement

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "ecascan",
+    "name": "ECA-Scan",
     "slug": "ecascan",
     "version": "0.0.5",
     "orientation": "portrait",
