--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "expo-av": "~15.0.2",
     "expo-device": "~7.0.2",
     "expo-notifications": "^0.29.13",
+    "expo-status-bar": "^2.0.1",
     "react": "18.3.1",
     "react-native": "0.76.7",
     "react-native-maps": "1.18.0",
