--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,7 +41,7 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node }}
-          cache: yarn
+          cache: npm
 
       - name: 🏗 Setup Expo and EAS
         uses: expo/expo-github-action@v7
