--- a/app.json
+++ b/app.json
@@ -14,7 +14,7 @@
       "backgroundColor": "#ffffff"
     },
     "ios": {
-      "supportsTablet": true,
+      "supportsTablet": false,
       "bundleIdentifier": "com.neprena.ecascan",
       "infoPlist": {
         "ITSAppUsesNonExemptEncryption": false
