--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "expo": {
     "name": "ECA-Scan",
     "slug": "ecascan",
-    "version": "0.0.5",
+    "version": "0.0.6",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "scheme": "ecascan",
@@ -19,7 +19,8 @@
       "infoPlist": {
         "ITSAppUsesNonExemptEncryption": false
       },
-      "buildNumber": "0.0.5"
+      "buildNumber": "0.0.6",
+      "googleServicesFile": "./GoogleService-Info.plist"
     },
     "android": {
       "adaptiveIcon": {
@@ -31,6 +32,7 @@
           "apiKey": "AIzaSyAM54lhiYraHQ9WG-Nm49ZyNZc9pbIu0Lk"
         }
       },
+      "googleServicesFile": "./google-services.json",
       "package": "com.neprena.ecascan"
     },
     "web": {
@@ -47,6 +49,16 @@
       "androidMode": "default",
       "androidCollapsedTitle": "Nouvelle alerte",
       "androidSound": "./assets/sounds/notification_sound.mp3"
-    }
+    },
+    "plugins": [
+      [
+        "@react-native-firebase/app",
+        {
+          "androidGoogleServicesFile": "./android/app/google-services.json",
+          "iosGoogleServicesFile": "./ios/ecascan/GoogleService-Info.plist"
+        }
+      ],
+      "@react-native-firebase/messaging"
+    ]
   }
 }
