--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/netinfo": "^11.4.1",
-    "@react-navigation/native": "^7.0.14",
+    "@react-native-firebase/app": "^21.12.0",
+    "@react-native-firebase/messaging": "^21.12.0",
+    "@react-navigation/native": "^7.0.15",
     "@react-navigation/native-stack": "^7.2.0",
     "expo": "~52.0.37",
     "expo-av": "~15.0.2",
