--- a/ios/ECAScan/GoogleService-Info.plist
+++ b/ios/ECAScan/GoogleService-Info.plist
@@ -5,11 +5,11 @@
 	<key>API_KEY</key>
 	<string>AIzaSyARVKBRzZxm1AnKenxDOcDCKfE-xH48WaY</string>
 	<key>GCM_SENDER_ID</key>
-	<string>74UW8WSSV8</string>
+	<string>915032574766</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.ecascan.ios</string>
+	<string>com.neprena.ecascan</string>
 	<key>PROJECT_ID</key>
 	<string>yr-ecascan</string>
 	<key>STORAGE_BUCKET</key>
@@ -25,15 +25,8 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:915032574766:ios:9904cd218854be1fa288bf</string>
+	<string>1:915032574766:ios:e3c6964b5733c0e1a288bf</string>
 	<key>DATABASE_URL</key>
 	<string>https://yr-ecascan-default-rtdb.europe-west1.firebasedatabase.app</string>
-	<key>FirebaseAppDelegateProxyEnabled</key>
-	<false/>
-	<key>UIBackgroundModes</key>
-	<array>
-		<string>fetch</string>
-		<string>remote-notification</string>
-	</array>
 </dict>
 </plist>
