--- a/ios/ECAScan/Info.plist
+++ b/ios/ECAScan/Info.plist
@@ -31,9 +31,15 @@
           <string>com.neprena.ecascan</string>
         </array>
       </dict>
+      <dict>
+        <key>CFBundleURLSchemes</key>
+        <array>
+          <string>exp+ecascan</string>
+        </array>
+      </dict>
     </array>
     <key>CFBundleVersion</key>
-    <string>3</string>
+    <string>0.0.6</string>
     <key>ITSAppUsesNonExemptEncryption</key>
     <false/>
     <key>LSMinimumSystemVersion</key>
