--- a/package.json
+++ b/package.json
@@ -18,17 +18,21 @@
     "@react-navigation/native-stack": "^7.2.0",
     "expo": "~52.0.37",
     "expo-av": "~15.0.2",
+    "expo-build-properties": "~0.13.2",
+    "expo-dev-client": "^5.0.12",
     "expo-device": "~7.0.2",
     "expo-notifications": "^0.29.13",
     "expo-status-bar": "^2.0.1",
+    "googleapis": "^146.0.0",
+    "iap-receipt-validator": "^1.0.6",
     "react": "18.3.1",
     "react-native": "0.76.7",
+    "react-native-iap": "^12.16.2",
     "react-native-maps": "1.18.0",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-vector-icons": "^10.2.0",
-    "react-native-websocket": "^1.0.2",
-    "expo-build-properties": "~0.13.2"
+    "react-native-websocket": "^1.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
