--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "iap-receipt-validator": "^1.0.6",
     "react": "18.3.1",
     "react-native": "0.76.7",
-    "react-native-iap": "^12.16.2",
     "react-native-maps": "1.18.0",
+    "react-native-purchases": "^8.8.0",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-vector-icons": "^10.2.0",
